--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,234 +1,364 @@
-/*Style Sheet for Basic Portfolio pages*/
-
-/*These properties define the entire page*/
 body {
-    background-image: url("./../images/fresh_snow.png");
-    background-size: cover;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 150%;
-    width: 50%;
-    color: #777777;
-    border-color: #dddddd;
-    margin: auto;
-  }
+  /* Positioning */
+  margin-bottom: 150px;
 
-/*Has the background image and makes the main container*/
-.content {
-    width: 1060px;
-    position: center;
-    min-height: calc(100vh - 70px);
-    overflow: auto;
-    clear: none;
-  }
+  /* Typography */
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
-/*Contains properties for my Name*/
-header {
-    color: #ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background: #ffffff;
-    border-bottom: 2px solid #cccccc;
-    width: 100%;
-    text-align: center; 
-    margin: inherit;   
-  }
+  /* Visual */
+  background-image: url("../images/fresh_snow.png");
+}
 
-/*This is the actual box my name is in*/
-h1 {
-    padding: 20px 0;
-    width: 240px;
-    margin: inherit;
-    font-size: 28px;
-    color: #ffffff;
-    background: #4aaaa5;
-    margin-left: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
-/*Properties for other headers*/
-h2 {
-    padding: 8px;
-    font-size: 24px;
-    color: #4aaaa5;
-    background-color: #ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    border-bottom: 2px solid #cccccc;
-  }
+html {
+  /* Positioning */
+  position: relative;
 
-p {
-    text-indent: 30px;
-    padding-top: 20px;
-  }
+  /* Box-model */
+  min-height: 100%;
+}
 
-#bio-image {
-    width: 200px;
-    height: 200px;
-    margin-top: 5px;
-    float: left;
-    padding-right: 10px;
-    padding-top: 20px;
-  }
-  
-/*This styles the social links*/  
-ul {
+/* ---------NAV START---------- */
 
+.navbar-custom, .navbar-brand {
+  background-color: #fff;
+}
 
-    margin-top: 20px; 
-    padding: 10px;
-  }
-
-/*You need this to make them line up horizontally*/
-
-
-.social {
-  width: 60px;
+#logo {
+  /* Box-model */
   height: 60px;
-  padding-top: 30px;
-  text-align: center;
-}
+  padding: 20px 5px 5px 5px;
 
-/*Pushes the nav bar in a little from the right*/
-nav {
-    margin-right: 50px;
-}
+  /* Positioning */
+  margin-left: 70px;
+  font-family: Georgia, Times, "Times New Roman", serif;
 
-/*Most properties for the nav bar*/
-nav a {
-    margin: 0;
-    text-decoration: none;
-    padding: 10px;
-    color: #777777;
-    background-color: #ffffff;
-    overflow: hidden;
-    float: right;
-    border: 0;
-    margin-top: 10px;
-  }
-  nav a:hover {
-    color: #4aaaa5;
-  }
+  /* Typography */
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
 
-/*Place holder image properties for future projects*/
-.gallery {
-    
-    margin: 10px;
-    border: 1px solid #cccccc;
-    float: left;
-    opacity: 0.9;
-    margin-bottom: 20px;
-    color: #ffffff;
-  }
-
-.project {
-  width: 240px;
-  height: 200px;
- 
-}
-
-/*The text in those project images*/
-/*Description needs to be moved onto image and re-sized*/
-.desc {
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  margin: auto;
-  width: 100%;
-  color: #ffffff;
+  /* Visual */
   background: #4aaaa5;
-  
-  z-index: -1;
 }
 
-/*Defines the the space for the large elements in the pages*/
-.container {
-  width: 610px;
+.navbar-right-custom {
+  /* Box-model */
+  padding-top: 6px;
+  padding-right: 20px;
+
+  /* Typography */
+  font-family: Arial;
+  font-weight: lighter;
+}
+
+.navbar-nav > li > a:hover {
+  color: #4aaaa5;
+}
+
+.nav item li {
+  color: #4aaaa5;
+}
+
+/* --------NAV END---------- */
+
+.about-me-header {
+  /* Positioning */
+  margin-bottom: 33px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+
+  /* Typography */
+  font-size: 32px;
+  font-weight: bold;
+  color: #4aaaa5;
+}
+
+.about-me-content {
+  /* Box-model */
+  width: 100%;
+  padding: 30px;
+
+  /* Positioning */
+  margin-top: 32px;
+
+  /* Visual */
+  background-color: #fff;
+}
+
+.about-me-content > p {
+  /* Box-model */
+  padding-top: 20px;
+
+  /* Typography */
+  font-size: 16px;
+  line-height: 30px;
+  color: #bbc;
+}
+
+#codySherrod {
+  /* Positioning */
+  float: left;
+
+  /* Box-model */
+  width: 200px;
+  height: 200px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+/* ----------------- */
+
+/* CONNECT W/ ME CSS */
+
+/* ----------------- */
+
+#connect-with-me-area {
+  width: 100%;
+
+  /* Box-model */
+  padding: 30px 30px 43px;
+
+  /* Positioning */
+  margin-top: 32px;
+
+  /* Visual */
+  background-color: #fff;
+}
+
+.connect-with-me-header {
+  /* Positioning */
+  margin-bottom: 15px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+
+  /* Typography */
+  font-size: 25px;
+  font-weight: bold;
+  color: #4aaaa5;
+}
+
+.connect-with-me-photo {
+  width: 55px;
+
+  /* Box-model */
+  height: 55px;
+}
+
+#images {
+  /* Box-model */
+  padding-top: 15px;
+
+  /* Typography */
+  text-align: center;
+}
+
+/* -------END-------- */
+
+.footer {
+  /* Positioning */
+  position: absolute;
+  bottom: 0;
+
+  /* Box-model */
+  width: 100%;
+  height: 60px;
   margin-top: 30px;
-  margin-bottom: 30px;
-  overflow: auto;
-  margin-left: 50px;
-  background-color: #ffffff;
-  padding: 20px;
-  clear: none;
-  border: 1px solid #cccccc;
+
+  /* Visual */
+  background-color: #666;
 }
 
-/*Contact info form*/
-form {
-  width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-  border: 2px solid #cccccc;
-  background-color:#ffffff;
-  resize: none;
-}
+.text-muted-footer  {
+  /* Positioning */
+  margin-top: 15px;
 
-/*Where the big message is in the form*/
-textarea {
-  width: 100%;
-  height: 150px;
-  padding: 10px;
-  box-sizing: border-box;
-  border: 1px solid #cccccc;
-  background-color: #ffffff;
-}
-
-/*Space for the user to write in*/
-input[type=text] {
-  width: 100%;
-  padding: 10px;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-/*Submit buttom properties*/
-input[type=submit] {
-  width: 150px;
-  background-color: #4aaaa5;
+  /* Typography */
   color: #ffffff;
-  padding: 10px;
-  border: 2px solid #cccccc;
-  cursor: pointer;
 }
 
-#contact {
-  width: 100%;
-  overflow: auto;
-  clear: both;
-}
-/*Container for the social links*/
-aside {
-  float: right;
-  width: 230px;
-  height: 160px;
-  padding: 20px;
-  margin-top: 30px;
-  margin-right: 50px;
-  background: #ffffff;
-  border: 1px solid #cccccc;
-  text-align: center;
-}
+.two-toned-footer-color {
+  /* Box-model */
+  height: 6px;
+  padding-top: 3px;
 
-img:hover {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-
-input:hover {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-
-footer {
-  display: block;
-  background: #666666;
-  color: #777777;
-  height: 20px;
-  line-height: 50px;
-  padding: 30px 0;
-  text-align: center;
-  border-top-style: solid;
-  border-top-color: #4aaaa5;
-  border-top-width: 8px;
+  /* Visual */
+  background-color: #4aaaa5;
   
-  font-size: 14px;
+}
+
+/* ----------------- */
+
+/* CONTACT FORM CSS  */
+
+/* ----------------- */
+
+.contact-form {
+  width: 100%;
+
+  /* Box-model */
+  padding: 45px 10px 25px 31px;
+
+  /* Positioning */
+  margin-top: 30px;
+
+  /* Visual */
+  background-color: #fff;
+}
+
+.contact-form-header,
+.port-header {
+  /* Positioning */
+  margin-bottom: 33px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+
+  /* Typography */
+  font-size: 32px;
+  font-weight: bold;
+  color: #4aaaa5;
+}
+
+#name_input,
+#mail_input,
+#msg {
+  width: 95%;
+
+  /* Box-model */
+  height: 30px;
+
+  /* Positioning */
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+#msg {
+  /* Box-model */
+  height: 200px;
+
+  /* Visual */
+  border-color: #bbc;
+}
+
+.label-name,
+.label-msg,
+.label-mail {
+  /* Typography */
+  font-size: 17px;
+  color: #bbc;
+}
+
+.contact-hr {
+  margin-bottom: 30px;
+}
+
+.submit-btn {
+  /* Box-model */
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: lighter;
+
+  /* Typography */
+  color: #fff;
+
+  /* Visual */
+  background-color: #4aaaa5;
+  border: 0;
+}
+
+/* --------END-------- */
+
+/* ----------------- */
+
+/* PORTFOLIO PAGE CSS */
+
+/* ------------------ */
+
+#portfolio-area {
+  /* Box-model */
+  width: 85%;
+  padding: 45px 10px 25px 31px;
+
+  /* Positioning */
+  margin-top: 30px;
+  margin-bottom: 200px;
+
+  /* Visual */
+  background-color: #fff;
+}
+
+.port-hr {
+  margin-bottom: 40px;
+}
+
+.port-imgs {
+  /* Box-model */
+  width: 233px;
+  height: 166px;
+  margin-right: 15px;
+
+  /* Positioning */
+  margin-bottom: 15px;
+}
+
+.work {
+  position: relative;
+  float: left;
+  margin: 20px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+/* --------END--------- */
+
+/* ----------------- */
+
+/* MEDIA  QUERY  CSS */
+
+/* ----------------- */
+
+@media only screen and (max-width: 767px) {
+  .navbar-header {
+    background-color: #4aaaa5;
+  }
+
+  #logo {
+    width: 100%;
+
+    /* Box-model */
+    height: 60px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+
+    /* Positioning */
+    margin-left: 0;
+    font-family: Georgia, Times, "Times New Roman", serif;
+
+    /* Typography */
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+
+    /* Visual */
+    background: #4aaaa5;
+  }
 }
